Fix high-severity issues: shipped CLI, vulnerable dependency, data loss, credential leak, dead geolocation
- Move UNISoNCLI from src/test/java to src/main/java so the documented
  CLI entry point actually ships in the JAR; drop the @Disabled JUnit
  annotation and replace a JUnit assertion in production logic with a
  UNISoNException
- Pin commons-collections to 3.2.2 in dependencyManagement, fixing the
  InvokerTransformer RCE gadget (CVE-2015-6420/7501) pulled in
  transitively via jung:jung:1.7.6
- Switch production Hibernate config from an in-memory HSQLDB
  (jdbc:hsqldb:mem:testdb, hbm2ddl.auto=create) to a file-backed
  database with hbm2ddl.auto=update, so downloaded archives survive
  a restart
- Remove dead hibernate.cache.provider_class=OSCacheProvider config
  (class removed from Hibernate since v4) and the now-orphaned
  oscache.properties files
- Stop interpolating the NNTP password into an exception message that
  gets logged and shown in the UI
- Replace the retired freegeoip.net HTTP endpoint with ip-api.com over
  HTTPS in LocationFinderImpl, update JSON field parsing to match, and
  log lookup failures via SLF4J instead of printStackTrace

Fixes #382, #383, #384, #385, #386, #387

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DPNXWqUi5pT8p5gqhLR5SL